# hexlet_pytest

hello/: pyproject.toml
hello/hello/scripts/: say_hello.py
hello/scripts/: say_hello.py
hexlet_pytest/: README.md  pyproject.toml
hexlet_pytest/hexlet_pytest/: example.py  stack.py
hexlet_pytest/tests/: test_stack.py
